scripts/nullness/annotator/url64700e9ab7_dwicke_course_scheduler_tgz-pJ8-org_json_TestJ8.txt
../annotator/url64700e9ab7_dwicke_course_scheduler_tgz-pJ8-org_json_TestJ8/src/coursescheduleapp/CourseTimeTest.java:5: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url64700e9ab7_dwicke_course_scheduler_tgz-pJ8-org_json_TestJ8/src/coursescheduleapp/TimeCollTest.java:12: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url64700e9ab7_dwicke_course_scheduler_tgz-pJ8-org_json_TestJ8/src/coursescheduleapp/TimePeriodTest.java:13: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url64700e9ab7_dwicke_course_scheduler_tgz-pJ8-org_json_TestJ8/src/coursescheduleapp/TimeDayTest.java:13: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url64700e9ab7_dwicke_course_scheduler_tgz-pJ8-org_json_TestJ8/src/coursescheduleapp/CourseTimeTest.java:20: error: cannot find symbol
	@Initializer @Override
	 ^
  symbol:   class Initializer
  location: class CourseTimeTest
../annotator/url64700e9ab7_dwicke_course_scheduler_tgz-pJ8-org_json_TestJ8/src/coursescheduleapp/TimeCollTest.java:31: error: cannot find symbol
	@Initializer @Override
	 ^
  symbol:   class Initializer
  location: class TimeCollTest
../annotator/url64700e9ab7_dwicke_course_scheduler_tgz-pJ8-org_json_TestJ8/src/coursescheduleapp/TimePeriodTest.java:33: error: cannot find symbol
	@Initializer @Override
	 ^
  symbol:   class Initializer
  location: class TimePeriodTest
../annotator/url64700e9ab7_dwicke_course_scheduler_tgz-pJ8-org_json_TestJ8/src/coursescheduleapp/TimeDayTest.java:32: error: cannot find symbol
	@Initializer @Override
	 ^
  symbol:   class Initializer
  location: class TimeDayTest
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
8 errors
